deployments/appa-depploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appa-deploy
spec:
  replicas: 5
  selector:
    matchLabels: 
      app: appa
      ver: v1
  minReadySeconds: 15
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: appa
        ver: v1
    spec:
      containers:
      - name: appa-container
        image: desradeva/desi-php-web-server:0.01
        ports:
        - containerPort: 80
