deployments/appa-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: appa-svc
  labels:
    app: appa
    ver: v1
spec:
  selector:
    app: appa
    ver: v1
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
