deployments/appa-ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: appa-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
  - hosts:
    - appa.local
    secretName: appa-tls
  rules:
  - host: appa.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: appa-svc
            port:
              number: 80
